# pymirror

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  setup.py
app/: main.py  update.py
app/resources/: selenium.py
app/templates/: index.html
dags/: __init__.py  resources.py
dags/resources/: definitions.py  io_managers.py  resources.py
dags/widgets/bins/: bins_assets.py  bins_transformations.py
dags/widgets/datetime/: datetime.py
dags/widgets/football/: football_assets.py  football_transformations.py
dags/widgets/tfl/: helpers.py  tfl_assets.py  tfl_departures.py  tfl_html.py  tfl_status.py
dags/widgets/weather/: weather_assets.py  weather_html.py  weather_transformations.py
resources/: selenium.py  sqlite.py
widgets/: update.py
widgets/bins/: bins.py  bins_html.py
widgets/datetime/: datetime.py
widgets/football/: football.py  football_html.py
widgets/tfl/: helpers.py  tfl_departures.py  tfl_html.py  tfl_status.py
widgets/weather/: weather.py  weather_html.py
